tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_trait_impl_where_clause_stricter_pass/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: impl has stricter requirements than trait
   ┌─ src/main.nr:5:12
   │
 5 │         fn bad_foo<T, H>() where H: OtherTrait;
   │            ------- definition of `bad_foo` from trait
   ·
17 │         fn bad_foo<A, B>() where A: OtherTrait { }
   │                                     ---------- impl has extra requirement `A: OtherTrait`
   │

Aborting due to 1 previous error
